--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,24 @@ p{
 footer{
     text-align: center;
 }
+
+/*MISSATGES FORMULARI*/
+.succes{
+    background-color: rgb(0, 153, 0);
+    color: white;
+}
+
+.mensaje{
+    width: 50%;
+    text-align: center;
+    border-radius: 1rem;
+    border: .3rem solid black;
+    margin-top: 3rem;
+    font-size: 3rem;
+    text-transform: uppercase;    
+}
+
+.error{
+    background-color: rgb(243, 17, 17);
+    color: white;
+}
