--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ footer{
 
 .fila{
     display: grid;
-    grid-template-columns: .5fr 2fr 1fr 2fr 3fr;
+    grid-template-columns: .5fr 2fr 1fr 2fr 3fr 1fr;
 }
 
 .campo{
